Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -663,7 +663,7 @@
     "general-concepts": "Allgemeine Konzepte",
     "general-data": "allgemeine Informationen",
     "generate": "Erstellen",
-    "generate-accounting-entries": "Generar asientos",
+    "generate-accounting-entries": "Buchungssätze generieren",
     "generate-accounting-entry": "Buchung erstellen",
     "generate-doc-type": "Dokumententyp erstellen",
     "generate-invoice": "Rechnung erstellen",
@@ -781,7 +781,7 @@
     "invalid-number": "Ungültige Nummer",
     "invalid-request": "Antrag nicht gültig",
     "invalid-user-can-permission": "Ungültige Berechtigung: %permission%. Die verfügbaren Berechtigungen sind access, delete, export, import, update und only-owner-data.",
-    "invalid-web": "Dirección web no válida",
+    "invalid-web": "Ungültige Webadresse",
     "invoice": "Rechnung",
     "invoice-email-subject": "Rechnungs-E-Mail Betreff",
     "invoice-email-text": "Hallo, als Anlage Ihre Rechnung %code%",
@@ -913,7 +913,7 @@
     "low-security": "Low security",
     "machine": "Maschine",
     "machines": "Maschinen",
-    "macro-account-note-info": "Keys for values replacement macro",
+    "macro-account-note-info": "Schlüssel zur Werteersetzung im Makro",
     "mail-server-error": "Error al conectar al servidor de correo",
     "mail-test-error": "mail-test-error",
     "mail-test-ok": "Satisfactory email proof",
@@ -973,7 +973,7 @@
     "month-2": "Febrero",
     "month-3": "M",
     "month-4": "Abril",
-    "month-5": "Mayo",
+    "month-5": "Mai",
     "month-6": "Juni",
     "month-7": "Julio",
     "month-8": "Agosto",
@@ -1017,7 +1017,7 @@
     "no-extra-lines": "no-extra-lines",
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "no-invoice",
-    "no-outstanding-amount": "no-outstanding-amount",
+    "no-outstanding-amount": "Kein ausstehender Betrag",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
     "no-selected-item": "no-selected-item",
@@ -1080,7 +1080,7 @@
     "origin": "Ursprung",
     "origin-warehouse": "Origin warehouse",
     "original": "Original",
-    "original-file": "Fichero original",
+    "original-file": "Originaldatei",
     "other-data": "Andere Daten",
     "others-filters": "Others filters",
     "out-of-stock": "nicht vorrätig",
@@ -1481,7 +1481,7 @@
     "surcharge": "Zuschlag",
     "surname": "Nachnamen",
     "suspended": "Suspendiert",
-    "swift": "Schnell",
+    "swift": "Swift\/BIC",
     "symbol": "Symbol",
     "table": "table",
     "table-checked": "Tabelle 0 ist markiert.",
@@ -1654,7 +1654,7 @@
     "wizard-p": "Füllen Sie dieses Formular zu Ihrem Unternehmen aus, um die Konfiguration abzuschließen.",
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
     "work-events": "Eventos de trabajo",
-    "working-hours": "Horario de trabajo",
+    "working-hours": "Arbeitszeit",
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "Spalte X",
     "x-operation": "Operation X",
