--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -457,7 +457,7 @@
     "disable": "Ezgaitu",
     "disable-plugins": "Desgaitu plug-inak",
     "disabled": "Ezgaitua",
-    "disabled-plugins": "Desgaitutako plug-in-ak",
+    "disabled-plugins": "Plug-in-ak desgaituta daude",
     "discharge-date": "Alta data: %date%",
     "discount": "Beherapena",
     "display": "Bistaratzea",
@@ -1384,7 +1384,7 @@
     "show-pending-remittances": "Erakutsi zain dauden bidalketak",
     "show-price": "Prezioa inprimatzean bistaratu",
     "show-quantity": "Kopurua inprimatzean bistaratu",
-    "show-section-new": "Erakutsi sortu atal",
+    "show-section-new": "Sortu atalik erakutsi",
     "signature": "Sinadura",
     "simple": "Sinplea",
     "simplified": "Simplifikatua",
@@ -1436,7 +1436,7 @@
     "subaccount": "Azpi-kontua",
     "subaccount-bad-codcuenta": "%codsubcuenta% azpikontuak kontu oker bat du esleituta.",
     "subaccount-belongs-other-year": "%subAccountCode% azpi-kontua beste ekitaldi batekoa da.",
-    "subaccount-irpf": "PFEZ azpikontua",
+    "subaccount-irpf": "Saltze-subkontoa",
     "subaccount-irpf-creditor": "IRPF kreditari kontua",
     "subaccount-not-found": "%subAccountCode% azpi-kontua ez da aurkitu.",
     "subaccount-purchases": "Erosketa kontua",
