--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1524,7 +1524,7 @@
     "thousands-separator": "Separador de millares",
     "thursday": "Xoves",
     "ticket": "Ticket",
-    "tickets": "Tickets",
+    "tickets": "Tíckets",
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
