--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -337,7 +337,7 @@
     "credit": "Credito",
     "crm": "CRM",
     "cron-job": "cron-job",
-    "cron-timeout": "Il cron è stato fermato per non superare il tempo massimo di esecuzione di PHP. Per favore, esegui il cron da terminale per evitare questo limite.",
+    "cron-timeout": "Il cron è stato interrotto per non superare il tempo massimo di esecuzione di PHP. Si prega di eseguire il cron da terminale per evitare questo limite",
     "crons": "Cron",
     "currency": "Moneta",
     "currency-position": "Currency position",
@@ -351,7 +351,7 @@
     "customer-delivery-note": "Customer delivery note",
     "customer-delivery-notes": "Customer delivery notes",
     "customer-estimation": "Customer estimation",
-    "customer-estimations": "Customer estimations",
+    "customer-estimations": "Stime del cliente",
     "customer-group": "Gruppo di clienti",
     "customer-groups": "Gruppi di clienti",
     "customer-invoice": "Customer invoice",
@@ -793,7 +793,7 @@
     "invoice-regularized-cant-change-date": "La fattura è all'interno di una regolarizzazione di 0. La data non può essere modificata.",
     "invoice-regularized-cant-delete": "La fattura è all'interno di una regolarizzazione di 0. Non può essere cancellata.",
     "invoice-without-acc-entry": "invoice-without-acc-entry",
-    "invoiced": "invoiced",
+    "invoiced": "fatturato",
     "invoices": "banconote",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
     "ip": "IP",
@@ -842,7 +842,7 @@
     "languages-es_UY": "languages-es_UY",
     "languages-eu_ES": "languages-eu_ES",
     "languages-fr_FR": "languages-fr_FR",
-    "languages-gl_ES": "languages-gl_ES",
+    "languages-gl_ES": "lingue-gl_ES",
     "languages-it_IT": "Italiano",
     "languages-pl_PL": "Polaco",
     "languages-pt_BR": "Portugués (Brasil)",
@@ -986,7 +986,7 @@
     "more": "more",
     "more-fields": "more-fields",
     "more-plugins": "more-plugins",
-    "move-lines": "Mover líneas",
+    "move-lines": "Sposta linee",
     "movements": "movements",
     "my-profile": "Il mio profilo",
     "mysql": "MySQL",
@@ -1033,7 +1033,7 @@
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
     "not-public": "Non pubblico",
     "not-stored-content": "Contenuto non memorizzato",
-    "not-valid-email": "Invalid email %email%",
+    "not-valid-email": "Email non valida %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
     "not-valid-image": "Immagine non valida",
     "not-valid-percentage-retention": "Not valid percentage retention",
@@ -1131,7 +1131,7 @@
     "percentage-discount": "percentage-discount",
     "percentage-surcharge": "% Surcharge",
     "percentage-vat": "% IVA",
-    "period": "period",
+    "period": "periodo",
     "personalized": "Personalizado",
     "phase": "fase",
     "phone": "telefono",
@@ -1159,7 +1159,7 @@
     "plugin-order": "Ordine: %num%",
     "plugin-phpversion-error": "Il plugin %pluginName% richiede PHP %php% o superiore",
     "plugin-removal-disabled": "plugin-removal-disabled",
-    "plugin-unsupported-version": "plugin-unsupported-version",
+    "plugin-unsupported-version": "plugin-versione-non-supportata",
     "plugin-update": "Aggiornamento del plugin %pluginName% alla versione %version%",
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
@@ -1222,7 +1222,7 @@
     "pvpsindto-line-error": "Errore nel valore di pvpsindto della riga 0 del documento. Valore corretto: 1",
     "pvptotal-line-error": "Errore nel valore pvptotal della riga 0 del documento. Valore corretto: 1",
     "quantity": "Quantità",
-    "quantity-abb": "quantity-abb",
+    "quantity-abb": "abbreviazione di quantità",
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "quantity-served",
     "quantity-sold": "quantità venduta",
@@ -1390,7 +1390,7 @@
     "simplified": "Simplificada",
     "size": "size",
     "sketch": "Schizzo",
-    "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
+    "sketch-invoice-warning": "Questa fattura è ancora uno schizzo. Rendila ufficiale cambiando il suo stato in emesso",
     "small": "small",
     "smaller-than": "Più piccolo di",
     "soap-extension-not-installed": "La extensión SOAP non è attiva in PHP. Contatta il tuo fornitore di hosting per attivarla.",
@@ -1485,7 +1485,7 @@
     "symbol": "Simbolo",
     "table": "tabella",
     "table-checked": "Tabella 0 controllata.",
-    "table-not-found": "table-not-found",
+    "table-not-found": "tabella-non-trovata",
     "table-size": "table-size",
     "tables": "disegnare",
     "task": "task",
@@ -1535,7 +1535,7 @@
     "to-report": "Informar",
     "today": "today",
     "total": "Totale",
-    "total-amount": "total-amount",
+    "total-amount": "somma totale",
     "total-cost": "total-cost",
     "total-purchases": "Acquisti totali",
     "total-sales": "total-sales",
