--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1,6 +1,6 @@
 {
     "abbreviated": "Abreviado",
-    "about": "Acerca de",
+    "about": "O nas",
     "accept": "Aceptar",
     "accept-all": "Akceptuj wszystko",
     "accept-data": "Aceptar cambios u operación",
@@ -147,12 +147,12 @@
     "balance-sheet": "Balance de Situación",
     "balance-sheets": "Balances",
     "balances": "Balances",
-    "bank-account": "Cuenta Bancaria",
+    "bank-account": "Konto bankowe",
     "bank-accounts": "Cuentas bancarias",
     "bank-mandate": "Mandato",
     "bank-mandate-date": "Fecha Mandato",
     "banking-movements": "Movimientos bancarios",
-    "barcode": "Código de barras",
+    "barcode": "Kod kreskowy",
     "bcc": "CCO",
     "big": "Grande",
     "billing": "Facturación",
@@ -175,7 +175,7 @@
     "calculated-net-diff": "Znaleziono różnicę podczas obliczania netto. %net% VS %net2%",
     "calculated-surcharge-diff": "Znaleziono różnicę podczas obliczania opłaty równowartości. %surcharge% VS %surcharge2%",
     "calculated-tax-diff": "Znaleziono różnicę podczas obliczania całkowitego VATu. %tax% VS %tax2%",
-    "calculation": "Cálculo",
+    "calculation": "Obliczenie",
     "calendar": "Calendario",
     "can-not-open-zip-file": "No puedo abrir archivo zip '%zipFile%'",
     "cancel": "Cancelar",
@@ -330,7 +330,7 @@
     "create-delivery-note": "Crear albarán",
     "create-estimation": "Utwórz szacunek",
     "create-invoice": "Crear factura",
-    "create-new-record": "Crear nuevo registro",
+    "create-new-record": "Utwórz nowy wpis",
     "created": "Creado",
     "created-default-admin-account": "Se ha creado el usuario %nick% con la contraseña %pass%",
     "creation-date": "Fecha de creación",
@@ -360,7 +360,7 @@
     "customer-not-found": "Cliente no encontrado",
     "customer-order": "Pedido de Cliente",
     "customer-orders": "Pedidos de clientes",
-    "customer-payment-concept": "Cobro del recibo %document%",
+    "customer-payment-concept": "Pobranie za rachunek %document%",
     "customer-reached-maximum-risk": "El cliente ha superado su riesgo máximo",
     "customer-subaccount-p": "Indique una subcuenta a usar o deje el campo en blanco para asignar una automáticamente",
     "customers": "Klienci",
@@ -500,7 +500,7 @@
     "editable": "Editable",
     "email": "Email",
     "email-bcc": "Email con copia oculta",
-    "email-cc": "Email con copia",
+    "email-cc": "Email z kopią",
     "email-not-configured": "Email no configurado. Puedes configurar el email desde el menú administrador, panel de control, preferencias de aplicación.",
     "email-not-sent": "No enviado",
     "email-notification": "Notificación por email",
@@ -614,7 +614,7 @@
     "file-yet-exists": "Ya existe el archivo: %filePath%",
     "filecache-clear": "Filecache limpiada.",
     "filecache-delete-key-item": "Eliminado elemento '%item%' de Filecache.",
-    "filecache-get-key-item": "Obtenido elemento '%item%' from Filecache.",
+    "filecache-get-key-item": "Pobrany element '%item%' z Filecache.",
     "filecache-set-key-item": "Asignado elemento '%item%' a Filecache.",
     "files": "Archivos",
     "filter-method": "Método del filtro",
@@ -698,10 +698,10 @@
     "group-accounts": "Agrupar cuentas",
     "group-by-day": "Agrupar por día",
     "group-by-day-unixtime": "Agrupar por día (unixtime)",
-    "group-by-month": "Agrupar por mes",
+    "group-by-month": "Grupuj wg miesiąca",
     "group-by-month-unixtime": "Agrupar por mes (unixtime)",
     "group-by-subaccount": "Agrupar por subcuenta",
-    "group-by-week": "Agrupar por semana",
+    "group-by-week": "Grupuj wg tygodnia",
     "group-by-week-unixtime": "Agrupar por semana (unixtime)",
     "group-by-year": "Agrupar por año",
     "group-by-year-unixtime": "Agrupar por año (unixtime)",
@@ -758,7 +758,7 @@
     "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
     "incorrect-accounting-amount": "El importe del asiento es incorrecto.",
     "info": "Info",
-    "infostate-component-title": "Información de Estado",
+    "infostate-component-title": "Informacja o stanie",
     "initial-number": "Número inicial",
     "insert-update": "Añadir o modificar",
     "installed": "Instalado",
@@ -781,7 +781,7 @@
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
-    "invalid-web": "Dirección web no válida: %web%",
+    "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
     "invoice": "Factura",
     "invoice-email-subject": "Su factura %code%",
     "invoice-email-text": "Estimado cliente,  A continuación le adjuntamos la factura correspondiente a los servicios prestados. Si tienes cualquier consulta puede responder a este mismo email.  ¡Muchas gracias! Un saludo,",
@@ -809,7 +809,7 @@
     "item-limit": "Elementy na stronę",
     "items-added-correctly": "%num% elementos añadidos correctamente",
     "items-removed-correctly": "%num% elementos quitados correctamente",
-    "ivarep-subaccount-not-found": "Subcuenta de IVA repercutido no encontrada",
+    "ivarep-subaccount-not-found": "Podkonto odwrotne VAT nie znalezione",
     "ivasop-account-not-found": "Subcuenta de IVA soportado no encontrada",
     "january": "Enero",
     "job-name": "Nazwa pracy",
@@ -848,7 +848,7 @@
     "languages-pt_BR": "Portugués (Brasil)",
     "languages-pt_PT": "Portugués",
     "languages-va_ES": "Valenciano",
-    "last-activity": "Última conexión",
+    "last-activity": "Ostatnia aktywność",
     "last-bimester": "El pasado bimestre",
     "last-block": "Último bloque",
     "last-ip": "Ostatni adres IP",
@@ -883,7 +883,7 @@
     "linux": "Linux",
     "list": "Lista",
     "load-def-acc-plan": "Cargar plan contable predeterminado",
-    "loading-controller": "Cargando controlador: '%controllerName%'",
+    "loading-controller": "Ładowanie kontrolera: '%controllerName%'",
     "location": "Ubicación",
     "lock-accounting": "Bloquear contabilidad",
     "lock-entry": "Bloquear asiento",
@@ -979,7 +979,7 @@
     "month-8": "Agosto",
     "month-9": "Septiembre",
     "month-name": "Nombre del Mes",
-    "month-wildcard-info": "Mes actual (de la fecha actual)",
+    "month-wildcard-info": "Aktualny miesiąc (z obecnej daty)",
     "monthly": "Mensual",
     "monthly-payment": "Pago mensual",
     "months": "Meses",
@@ -992,7 +992,7 @@
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo sólo es requerido en algunos hostings con MySQL.",
-    "name": "Nombre",
+    "name": "Nazwa",
     "name-or-business-name": "Nombre o razón social",
     "nature": "Naturaleza",
     "need-help-password": "¿Necesita ayuda con la contraseña?",
@@ -1103,14 +1103,14 @@
     "parent-group-cant-be-the-same-group": "El Grupo Padre no puede ser el mismo grupo",
     "parent-group-loop": "El Grupo Padre %parentGroup% está causando una relación circular.",
     "partnumber": "Número de pieza",
-    "passenger": "Pasajero",
-    "password": "Contraseña",
+    "passenger": "Pasażer",
+    "password": "Hasło",
     "pattern": "Patrón",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
     "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
     "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
     "pay": "Pagar",
-    "pay-with-card": "Pagar con tarjeta",
+    "pay-with-card": "Zapłać kartą",
     "payment": "Pago",
     "payment-date": "Fecha de pago",
     "payment-days": "Días de pago",
@@ -1326,7 +1326,7 @@
     "search": "Buscar",
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-product": "Buscar producto",
-    "second-hand": "Segunda mano",
+    "second-hand": "Używane",
     "second-quarter": "2º trimestre",
     "second-trimester": "Drugi trymestr",
     "select": "Seleccionar",
@@ -1425,7 +1425,7 @@
     "stock": "Stock",
     "stock-transfer": "Transferencia de stock",
     "stock-transfers": "Transferencias de stock",
-    "stockmax": "Stock máx.",
+    "stockmax": "Max zapasów",
     "stockmin": "Stock mín.",
     "storage-limit-almost": "Niemal osiągnięto limit przechowywania (%limit%). Pozostało %free%",
     "storage-limit-reached": "Límite de almacenamiento alcanzado",
@@ -1533,7 +1533,7 @@
     "to": "Para",
     "to-refund": "A devolver",
     "to-report": "Zgłosić",
-    "today": "Hoy",
+    "today": "Dzisiaj",
     "total": "Total",
     "total-amount": "Suma total",
     "total-cost": "Coste total",
@@ -1634,7 +1634,7 @@
     "warehouses": "Almacenes",
     "warning": "Atención",
     "warnings": "Ostrzeżenia",
-    "web": "Web",
+    "web": "Strona internetowa",
     "website": "Strona internetowa",
     "wednesday": "Miércoles",
     "weeks": "Semanas",
