--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -183,7 +183,7 @@
     "cancelled": "cancelado",
     "cannot-generate-accounting-entry": "Erro ao gerar o lançamento contábil da fatura %invoice%",
     "cant-assign-date-already-regularized": "Não é possível atribuir a data %date% pois já existe uma regularização de %tax% para esse período.",
-    "cant-assing-subaccount-supplier": "Não é possível associar subconta para provedor 0",
+    "cant-assing-subaccount-supplier": "Impossível associar a subconta ao fornecedor %supplierCode%",
     "cant-associate-customer-subaccount": "Não é possível associar a subconta do cliente 0",
     "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree uno nuevo.",
     "cant-change-agent-in-settlement": "No se puede cambiar el agente en el asentamiento",
@@ -195,7 +195,7 @@
     "cant-delete-audit-log": "No se puede eliminar el registro de auditoría",
     "cant-delete-default-company": "cant-delete-default-company",
     "cant-delete-default-country": "Não é possível eliminar o país padrão",
-    "cant-delete-default-currency": "cant-delete-default-currency",
+    "cant-delete-default-currency": "Não é possível excluir a moeda padrão",
     "cant-delete-default-payment-method": "cant-delete-default-payment-method",
     "cant-delete-default-serie": "Não é possível eliminar a Série por defeito",
     "cant-delete-default-tax": "cant-delete-default-tax",
@@ -290,7 +290,7 @@
     "conditions": "conditions",
     "configure-columns": "Column Configurator",
     "confirm": "confirme",
-    "confirm-delete": "Confirmar apagar?",
+    "confirm-delete": "Confirmar excluir?",
     "connect": "Conectar",
     "contact": "Contato",
     "contact-data": "Dados de contato",
@@ -746,9 +746,9 @@
     "images-added-correctly": "%count% imágenes añadidas correctamente",
     "impacted-tax-re-subaccount": "Subconta de imposto impactado repercutido",
     "impacted-tax-subaccount": "impacted-tax-subaccount",
-    "import": "import",
+    "import": "Importar",
     "import-accounting-plan": "Importar Plano de Contabilidade",
-    "import-accounting-plan-p": "import-accounting-plan-p",
+    "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contábil padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
     "import-file": "Fichero de importación",
     "in-progress": "Em andamento",
     "in-stock": "in-stock",
@@ -958,7 +958,7 @@
     "mismatched-accounting-entry": "mismatched-accounting-entry",
     "missing-data-epigraph-group": "Faltando dados na epígrafe de grupo.",
     "missing-data-subaccount": "Falta dados na subconta.",
-    "missing-epigraph-data": "Os dados estão faltando na epígrafe.",
+    "missing-epigraph-data": "Dados em epígrafe faltando.",
     "missing-file": "Missing file",
     "missing-file-help": "Parece que este arquivo não está presente na sua instalação. Talvez você não o utilize, mas <em>não pode removê-lo<\/em>.",
     "mobile": "mobile",
@@ -1237,7 +1237,7 @@
     "readonly": "readonly",
     "rebuild": "Reconstruir",
     "rebuild-completed": "rebuild-completed",
-    "rebuild-stock": "rebuild-stock",
+    "rebuild-stock": "reconstruir-estoque",
     "receipt": "receipt",
     "receipt-expense-account": "receipt-expense-account",
     "receipts": "receipts",
@@ -1288,7 +1288,7 @@
     "repeat-password": "Repetir senha",
     "reply": "Resposta",
     "report": "Relatório",
-    "report-grouping-account": "Group by account",
+    "report-grouping-account": "Agrupar por contas",
     "report-non-grouping-account": "Non group by account",
     "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
@@ -1658,7 +1658,7 @@
     "write-a-message-here": "Escribe un mensaje aquí",
     "x-column": "x-column",
     "x-operation": "x-operation",
-    "y-column": "y-column",
+    "y-column": "Coluna Y",
     "year": "Ano",
     "year-wildcard-info": "Ano atual (da data de hoje)",
     "yearly": "Anualmente",
