--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1237,7 +1237,7 @@
     "readonly": "readonly",
     "rebuild": "rebuild",
     "rebuild-completed": "rebuild-completed",
-    "rebuild-stock": "rebuild-stock",
+    "rebuild-stock": "reconstruir-estoque",
     "receipt": "receipt",
     "receipt-expense-account": "receipt-expense-account",
     "receipts": "receipts",
@@ -1288,7 +1288,7 @@
     "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Relatório",
-    "report-grouping-account": "Group by account",
+    "report-grouping-account": "Agrupar por contas",
     "report-non-grouping-account": "Non group by account",
     "report-taxes-p": "Este relatório permite obter a desagregação de impostos das faturas de compra ou venda do intervalo selecionado",
     "reports": "Relatórios",
