--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -387,7 +387,7 @@
     "dateentry-wildcard-info": "Data indicada en la capçalera de l'assentament contable",
     "day": "day",
     "days": "Dies",
-    "days-log-retention": "Nº dies retenció logs",
+    "days-log-retention": "Núm. dies retenció logs",
     "days-until-expiration": "Dies fins venciment",
     "db-host": "Servidor de la base de senyes",
     "db-name": "Nom de la base de senyes",
@@ -975,7 +975,7 @@
     "month-4": "Abril",
     "month-5": "Mayo",
     "month-6": "Juny",
-    "month-7": "Julio",
+    "month-7": "Juliol",
     "month-8": "Agost",
     "month-9": "Septiembre",
     "month-name": "Nom del més",
@@ -1282,8 +1282,8 @@
     "renumber-accounting-error": "S'ha produït un erro durant la renumeració dels assentaments de l'eixercici fiscal %exerciseCode%",
     "renumber-accounting-ok": "La renumeració dels assentamens ha acabat",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
-    "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
-    "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
+    "renumber-invoices-p": "Renumera les factures en base a la data, de menor a major",
+    "renumber-invoices-success": "Les factures de l'exercici '%exercise%' han sigut renumerades correctament",
     "repeat-new-password": "Repetix la contrasenya",
     "repeat-password": "Repetir contraseña",
     "reply": "Resposta",
@@ -1349,7 +1349,7 @@
     "send-videos": "E",
     "sent-a-audio": "Va enviar un àudio",
     "sent-a-document": "Envià un document",
-    "sent-a-location": "Envió una ubicación",
+    "sent-a-location": "Has enviat una ubicació",
     "sent-a-picture": "Envió una imagen",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
@@ -1401,7 +1401,7 @@
     "sort-by-date-desc": "Ordenar per data desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
-    "sorted-asc": "Ordenado ascendente",
+    "sorted-asc": "Ordenat ascendent",
     "sorted-desc": "Ordenat descendent",
     "source": "Fuente",
     "source-code": "Codi font",
@@ -1613,7 +1613,7 @@
     "variants": "Variants del producte",
     "vat": "IVA",
     "vat-document": "Document de l'IVA",
-    "vat-exception": "Excepción de IVA",
+    "vat-exception": "Excepció d'IVA",
     "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
     "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
@@ -1669,7 +1669,7 @@
     "you-sent-a-audio": "Vas enviar un àudio",
     "you-sent-a-document": "Vas enviar un document",
     "you-sent-a-location": "Enviaste una ubicación",
-    "you-sent-a-picture": "Enviaste una imagen",
+    "you-sent-a-picture": "Has enviat una imatge",
     "you-sent-a-video": "Enviaste un video",
     "you-should-change-passwd": "Deuries canviar la teua contrasenya",
     "your": "seu",
