Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -201,7 +201,7 @@
     "cant-delete-default-tax": "Ezin da zerga lehenetsia ezabatu",
     "cant-delete-default-warehouse": "Ezin da biltegi lehenetsia ezabatu",
     "cant-delete-last-user": "Ezin da azkenengo erabiltzailea ezabatu",
-    "cant-delete-variant-with-documents": "Ezin da %reference% produktua edo aldaketaren ezabatu dokumentuekin erosita edo salduta izan delako. Blokeatu dezakezu baina.",
+    "cant-delete-variant-with-documents": "%reference% produktua edo aldaketarekin ezin da ezabatu dokumentuekin erosita edo salduta delako. Blokeatu dezakezu, baina.",
     "cant-load-controller": "Ezin da  '%controllerName%' kontroladorea kargatu.",
     "cant-modify-reference": "Ezin da erreferentzia aldatu.",
     "cant-remove-accounting-entry": "Ezin da idazpena ezabatu",
@@ -777,7 +777,7 @@
     "invalid-date-there-are-invoices-after": "Data baliogabea. Ba daude fakturak %date% ondorengo datarekin",
     "invalid-date-there-are-invoices-before": "Data baliogabea. %date% data hurrengo fakturaren dataren ondorengoa da",
     "invalid-iban": "IBAN baliogabea: %iban%",
-    "invalid-iso-code": "Código ISO ''%iso-code% no válido",
+    "invalid-iso-code": "Código ISO '%iso-code%' ez da zuzena",
     "invalid-number": "Zenbaki baliogabea: %number%",
     "invalid-request": "Eskaera baliogabea",
     "invalid-user-can-permission": "Baimen baliogabea: %permission%. Eskuragarri dauden baimenak atzitu, ezabatu, esportatu, inportatu, eguneratu eta jabe bakarraren datuak dira.",
@@ -1148,7 +1148,7 @@
     "plugin-deleted": "%pluginName% plugina ondo kendu da.",
     "plugin-disabled": "%pluginName% plugina ondo kendu da.",
     "plugin-enabled": "%pluginName% plugina ondo gaitu da.",
-    "plugin-file-too-big": "Zerbitzari honek ez du fitxategiak %size% MB baino handiagoa igotzea baimentzen. Mesedez, igotzeko gehitu fitxagiekaba Plugins karpetik kopiatu.",
+    "plugin-file-too-big": "Zerbitzari honek ez du fitxategiak %size% MB baino handiagoa igotzea baimentzen. Mesedez, PHPn fitxategien igoterako tamaina gehitu edo fitxategia kopiatu Plugins karpetan.",
     "plugin-installation-disabled": "Plugin instalaketa desaktibatuta dago zerbitzari honetan",
     "plugin-installed": "'%pluginName%' plugina instalatuta",
     "plugin-need-update": "%plugin% pluginak eguneraketa bat beharko du FacturaScripts-en bertsio berriarekin funtzionatzeko.",
