--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -160,7 +160,7 @@
     "birth-date": "Fecha de nacimiento",
     "birthday": "Cumpleaños",
     "block-date": "Fecha de bloqueo",
-    "blocked": "Bloqueado",
+    "blocked": "Zablokowany",
     "blocked-date": "Fecha de bloqueo",
     "body": "Body",
     "book": "Reservar",
@@ -367,7 +367,7 @@
     "customize": "Personalizar",
     "daily": "Diario",
     "dasboard-backup-li1": "Jeśli usuniesz lub odinstalujesz FacturaScripts, stracisz dane.",
-    "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
+    "dasboard-backup-li2": "Jeśli usuniesz lub odinstalujesz XAMPP, stracisz dane.",
     "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
     "dashboard": "Tablica",
     "dashboard-backup": "Copia de seguridad",
@@ -449,7 +449,7 @@
     "description3": "Descripción 3",
     "design": "Diseño",
     "destination-warehouse": "Almacén de destino",
-    "detail": "Detalle",
+    "detail": "Szczegóły",
     "details": "Detalles",
     "difference": "Diferencia",
     "different-passwords": "Las contraseñas no coinciden para el usuario %userNick%",
@@ -495,7 +495,7 @@
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Zduplikowana referencja: '%reference%'",
     "duplicated-request": "Petición duplicada",
-    "duration": "Duración",
+    "duration": "Czas trwania",
     "edit": "Editar",
     "editable": "Editable",
     "email": "Email",
@@ -525,21 +525,21 @@
     "enabled": "Activo",
     "enabled-plugins": "Wtyczki aktywne",
     "encrypt": "Encriptación",
-    "end-date": "Fecha de fin",
+    "end-date": "Data zakończenia",
     "end-time": "Hora finalización",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de Epígrafe",
     "epigraphs": "Epígrafes",
     "epigraphs-group": "Grupo Epígrafes",
     "equivalence": "Equivalencia",
-    "equivalent-account-not-found": "No se ha encontrado la cuenta equivalente a %accountCode% en el ejercicio %exerciseCode% ¿Has importado el plan contable?",
+    "equivalent-account-not-found": "Nie znaleziono konta równoważnego dla %accountCode% w ćwiczeniu %exerciseCode% Czy zaimportowałeś plan kont?",
     "equivalent-subaccount-not-found": "No se ha encontrado ninguna subcuenta equivalente a %subAccountCode% para copiar.",
     "error": "ERROR: %error%",
     "error-checking-vat-number": "Błąd podczas sprawdzania numeru VAT '%vat-number%' w systemie VIES",
     "error-connecting-memcache": "Error al conectar con el servidor Memcache.",
     "error-deleting-lines": "Error al eliminar líneas",
     "error-no-name-in-settings": "Error en la vista %viewName%. Falta informar el 'name' en alguna columna del xml",
-    "error-on-xml-file": "Error en archivo XML %fileName%",
+    "error-on-xml-file": "Błąd w pliku XML %fileName%",
     "error-processing-xmlview": "Error procesando el XML de la vista, el archivo '%fileName%' no existe o esta mal formado",
     "error-reading-file": "Error al leer el archivo '%fileName%'",
     "error-saving-lines": "Error al guardar las líneas",
@@ -575,7 +575,7 @@
     "exceptions": "Excepciones",
     "excess": "En exceso",
     "exclude-invalid": "Excluir inválidos",
-    "exclude-valid": "Excluir válidos",
+    "exclude-valid": "Wyklucz poprawne",
     "exempt": "Exento",
     "exercise": "Ejercicio",
     "exercise-date-out-range": "La fecha no está en el periodo del ejercicio.",
@@ -601,7 +601,7 @@
     "fax": "Fax",
     "february": "Febrero",
     "field-can-not-be-null": "El campo %fieldName% de la tabla %tableName% no puede ser nulo",
-    "field-required": "Campo requerido: %field%",
+    "field-required": "Pole wymagane: %field%",
     "fields": "Campos",
     "file": "Archivo",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
@@ -657,7 +657,7 @@
     "from-date": "Desde",
     "from-subaccount": "Desde subcuenta",
     "full-access": "Acceso completo",
-    "full-path": "Ruta completa",
+    "full-path": "Pełna ścieżka",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
     "general": "Ogólny",
     "general-concepts": "Conceptos generales",
@@ -715,7 +715,7 @@
     "has-parent": "Tiene padre",
     "hash": "Hash",
     "header": "Cabecera",
-    "heading-account-group-id": "ID grupo epígrafes",
+    "heading-account-group-id": "ID grupy kont",
     "heading-account-id-root": "ID padre",
     "health": "Salud",
     "height": "Alto",
@@ -730,7 +730,7 @@
     "hint-vat-register": "Ver\/Modificar registro de Impuesto",
     "history": "Historial",
     "homepage": "Página de inicio",
-    "host": "Host",
+    "host": "Gospodarz",
     "hour": "Hora",
     "hours": "Horas",
     "http": "HTTP",
@@ -1023,7 +1023,7 @@
     "no-selected-item": "Ningún elemento seleccionado",
     "no-stock": "Brak kontrolowania zapasów",
     "non-editable-accounting-entry": "Asiento no editable",
-    "non-editable-columns": "Columnas no editables: %columns%",
+    "non-editable-columns": "Kolumny nieedytowalne: %columns%",
     "non-editable-document": "Documento no editable",
     "none": "Ninguno",
     "normal": "Normal",
@@ -1085,7 +1085,7 @@
     "others-filters": "Otros filtros",
     "out-of-stock": "Sin stock",
     "page": "Página",
-    "page-break": "Salto de página",
+    "page-break": "Złamanie strony",
     "page-configuration": "Página de Configuración",
     "page-not-found": "Página no encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
@@ -1114,7 +1114,7 @@
     "payment": "Pago",
     "payment-date": "Fecha de pago",
     "payment-days": "Días de pago",
-    "payment-method": "Forma de pago",
+    "payment-method": "Metoda płatności",
     "payment-methods": "Formas de pago",
     "payments": "Płatności",
     "pct": "% pct",
@@ -1170,7 +1170,7 @@
     "positive-balance": "Saldo positivo",
     "post-office-box": "Apartado",
     "postgresql": "PostgreSQL",
-    "precio": "Precio",
+    "precio": "Cena",
     "predefined-concepts": "Conceptos Predefinidos",
     "preferences": "Preferencias",
     "preview": "Previsualizar",
@@ -1227,7 +1227,7 @@
     "quantity-served": "Cant. servida",
     "quantity-sold": "Cant. vendida",
     "randomizer-generating-more-items": "Generando más elementos...",
-    "rate": "Tarifa",
+    "rate": "Stawka",
     "rates": "Tarifas",
     "re": "RE",
     "re-open": "Reabrir",
@@ -1309,7 +1309,7 @@
     "risky-customer": "Cliente con riesgo",
     "rol": "Grupo",
     "role": "Grupa",
-    "roles": "Grupos",
+    "roles": "Role",
     "rules": "Reglas",
     "run": "Ejecutar",
     "running-plugin-cron": "Ejecutando cron del plugin %pluginName%",
@@ -1366,7 +1366,7 @@
     "service": "Servicio",
     "services": "Usługi",
     "settings": "Ajustes",
-    "settlement": "Liquidación",
+    "settlement": "Rozliczenie",
     "settlement-product": "Producto de liquidación",
     "settlements": "Liquidaciones",
     "setup-options": "Ajustar opciones",
@@ -1450,7 +1450,7 @@
     "success": "Éxito",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de IVA debería ser: %lineNet%",
-    "sum-total-line-tax-must-be": "La suma de los totales de iva de las líneas de IVA debería ser: %lineTotalTax%",
+    "sum-total-line-tax-must-be": "Suma podatków od wszystkich wierszy powinna wynosić: %lineTotalTax%",
     "summary": "Resumen",
     "sums-and-balances": "Sumas y saldos",
     "sunday": "Domingo",
@@ -1604,7 +1604,7 @@
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de valoración",
-    "value": "Valor",
+    "value": "Wartość",
     "value-x": "Valor X",
     "value-y": "Valor Y",
     "values": "Valores",
