--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -405,7 +405,7 @@
     "default-customer": "Cliente Padrão",
     "default-retention": "retenção-padrão",
     "default-role": "F",
-    "default-tax": "default-tax",
+    "default-tax": "Imposto padrão",
     "default-to-company-email": "Por defecto al email de la empresa",
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Armazém predefinido",
@@ -509,7 +509,7 @@
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
     "email-sent": "Email enviado",
-    "email-sent-to": "email-sent-to",
+    "email-sent-to": "Email enviado para %email%",
     "email-signature": "email-signature",
     "email-to": "Email To",
     "emails": "E-mails",
@@ -898,7 +898,7 @@
     "login-ok": "Faça o login com sucesso (cookie). Usuário: '0'",
     "login-password-fail": "Falha na autenticação",
     "login-text": "Entrar",
-    "login-to-continue": "login-to-continue",
+    "login-to-continue": "Faça login para continuar",
     "login-to-continue-p": "Necesita identificarse para continuar con esta acción. Haga clic en iniciar sesión o cree una cuenta.",
     "login-user-not-found": "Usuário não encontrado",
     "logo": "logo",
@@ -1535,7 +1535,7 @@
     "to-report": "Para relatar",
     "today": "Hoje",
     "total": "Total",
-    "total-amount": "total-amount",
+    "total-amount": "Valor total",
     "total-cost": "Custo total",
     "total-purchases": "Total das Compras",
     "total-sales": "Total das Vendas",
