--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1670,7 +1670,7 @@
     "you-sent-a-document": "Vas enviar un document",
     "you-sent-a-location": "Enviaste una ubicación",
     "you-sent-a-picture": "Has enviat una imatge",
-    "you-sent-a-video": "Enviaste un video",
+    "you-sent-a-video": "Vas enviar un vídeo",
     "you-should-change-passwd": "Deuries canviar la teua contrasenya",
     "your": "seu",
     "zip-code": "Codi postal",
