--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -775,7 +775,7 @@
     "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
     "invalid-date": "Datum %1$s ungültig.",
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
-    "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
+    "invalid-date-there-are-invoices-before": "Ungültiges Datum: %date%. Die Rechnung %other% liegt davor und hat dennoch ein späteres Datum: %other-date%. Jede Rechnung muss ein früheres oder gleiches Datum haben wie die folgende.",
     "invalid-iban": "invalid-iban",
     "invalid-iso-code": "C",
     "invalid-number": "Ungültige Nummer",
@@ -1005,7 +1005,7 @@
     "new-customers": "new-customers",
     "new-invoice-line-p": "Sie können ein Produkt hinzufügen, indem Sie auf die Produkt-Schaltfläche klicken oder dessen Referenz oder Barcode im Barcode-Feld eingeben. Oder drücken Sie die Linien-Schaltfläche für eine Linie ohne Produkt.",
     "new-password": "neues Passwort",
-    "new-price": "new-price",
+    "new-price": "Neuer Preis",
     "new-refund": "new-refund",
     "new-supplier": "new supplier",
     "news": "Nachrichten",
@@ -1056,7 +1056,7 @@
     "offsetting-account": "Offsetting account",
     "only-active": "Nur aktive",
     "only-charged": "nur berechnet",
-    "only-closed": "only-closed",
+    "only-closed": "Nur geschlossen",
     "only-insert": "Sólo añadir",
     "only-owner-data": "only-owner-data",
     "only-pending": "only-pending",
@@ -1230,7 +1230,7 @@
     "rate": "rate",
     "rates": "Preise",
     "re": "RE",
-    "re-open": "re-open",
+    "re-open": "Wieder öffnen",
     "react": "Reaccionar",
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
@@ -1306,7 +1306,7 @@
     "retentions": "Retentions",
     "review-date": "Prüfungsdatum",
     "right": "Rechts",
-    "risky-customer": "risky-customer",
+    "risky-customer": "Riskanter Kunde",
     "rol": "Rol",
     "role": "Rolle",
     "roles": "Rollen",
@@ -1344,12 +1344,12 @@
     "send-invoices": "Enviar facturas",
     "send-location": "Enviar ubicación",
     "send-mail": "Send mail",
-    "send-mail-error": "send-mail-error",
+    "send-mail-error": "Fehler beim Senden der E-Mail",
     "send-mail-ok": "send-mail-ok",
     "send-videos": "Videos senden",
     "sent-a-audio": "h",
     "sent-a-document": "Envió un documento",
-    "sent-a-location": "Envió una ubicación",
+    "sent-a-location": "Standort gesendet",
     "sent-a-picture": "Ein Bild gesendet",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
@@ -1494,7 +1494,7 @@
     "tasks-component-title": "Aufgaben",
     "tasks-personal-title": "Persönliche Aufgaben",
     "tax": "MwSt",
-    "tax-area": "tax-area",
+    "tax-area": "Steuerbereich",
     "tax-areas": "tax-areas",
     "tax-base": "Steuerbemessungsgrundlage",
     "tax-credit-account": "Credit account for taxes",
@@ -1525,7 +1525,7 @@
     "thursday": "thursday",
     "ticket": "Ticket",
     "tickets": "T",
-    "time": "Time",
+    "time": "Zeit",
     "timezone": "Wähle Zeitzone aus",
     "title": "Title",
     "title-font-size": "t",
